// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeDependencies (local) > should analyze dependencies correctly 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 2,
      "development": 1,
      "duplicate": 0,
      "esm": 1,
      "production": 2,
    },
    "installSize": 299,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle empty project 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 0,
      "development": 0,
      "duplicate": 0,
      "esm": 0,
      "production": 0,
    },
    "installSize": 0,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle missing node_modules 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 0,
      "development": 0,
      "duplicate": 0,
      "esm": 0,
      "production": 1,
    },
    "installSize": 0,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (local) > should handle symlinks 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 0,
      "development": 0,
      "duplicate": 0,
      "esm": 1,
      "production": 1,
    },
    "installSize": 72,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;

exports[`analyzeDependencies (tarball) > should analyze a real tarball fixture 1`] = `
{
  "messages": [],
  "stats": {
    "dependencyCount": {
      "cjs": 0,
      "development": 0,
      "duplicate": 0,
      "esm": 0,
      "production": 0,
    },
    "installSize": 226,
    "name": "test-package",
    "version": "1.0.0",
  },
}
`;
